--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
     </svg>  -->
     <object data="/assets/img/altium-designer.png" width="40" height="40"> </object>
     <object data="/assets/img/solidworks.png" width="40" height="40"> </object>
-    <p>Embedded systems needs to be in touch with the real world. I love to design circuits and PCBs to bring great ideas to life</p>
+    <p>Embedded systems needs to be in touch with the real world. I love to design and make circuits and PCBs to bring great ideas to life</p>
   </div>
   <div class="tech">
     <h2>Software</h2>
@@ -56,7 +56,7 @@
   </div>
   <div class="tech">
     <h2>Tools</h2>
-    <svg viewBox="0 0 128 128">
+    <!-- <svg viewBox="0 0 128 128">
       <path fill="#F34F29" d="M124.737 58.378l-55.116-55.114c-3.172-3.174-8.32-3.174-11.497 0l-11.444 11.446 14.518 14.518c3.375-1.139 7.243-.375 9.932 2.314 2.703 2.706 3.461 6.607 2.294 9.993l13.992 13.993c3.385-1.167 7.292-.413 9.994 2.295 3.78 3.777 3.78 9.9 0 13.679-3.78 3.78-9.901 3.78-13.683 0-2.842-2.844-3.545-7.019-2.105-10.521l-13.048-13.048-.002 34.341c.922.455 1.791 1.063 2.559 1.828 3.778 3.777 3.778 9.898 0 13.683-3.779 3.777-9.904 3.777-13.679 0-3.778-3.784-3.778-9.905 0-13.683.934-.933 2.014-1.638 3.167-2.11v-34.659c-1.153-.472-2.231-1.172-3.167-2.111-2.862-2.86-3.551-7.06-2.083-10.576l-14.313-14.313-37.792 37.79c-3.175 3.177-3.175 8.325 0 11.5l55.117 55.114c3.174 3.174 8.32 3.174 11.499 0l54.858-54.858c3.174-3.176 3.174-8.327-.001-11.501z"></path>
     </svg> 
     <svg viewBox="0 0 128 128">
@@ -67,7 +67,10 @@
       <polygon fill="#FFFFFF" points="1,5 3,5 3,2 4,2 4,5 5,5 5,1 1,1 "/>
       <path fill="#FFFFFF" d="M6,1v5h2V5h2V1H6z M9,4H8V2h1V4z"/>
       <polygon fill="#FFFFFF" points="11,1 11,5 13,5 13,2 14,2 14,5 15,5 15,2 16,2 16,5 17,5 17,1 "/>
-    </svg>
-    <p>Git, Linux, Docker, you name it, I have used a bajillion tools!</p>
+    </svg> -->
+    <object data="/assets/img/tux.svg" width="40" height="40"> </object>
+    <object data="/assets/img/Git_icon.svg" width="40" height="40"> </object>
+    <object data="/assets/img/visual-studio-code.svg" width="40" height="40"> </object>
+    <p>Git, Linux, Docker, IDEs, SDKs, Debuggers, you name it. Every project deserves the right tools!!</p>
   </div>
 </div>
