--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
     </svg>  -->
     <object data="/assets/img/altium-designer.png" width="40" height="40"> </object>
     <object data="/assets/img/solidworks.png" width="40" height="40"> </object>
-    <p>Embedded systems needs to be in touch with the real world. I love to design and make circuits and PCBs to bring great ideas to life</p>
+    <p>Embedded systems needs to be in touch with the real world. I love to design and make circuits and PCBs to bring great ideas to life.</p>
   </div>
   <div class="tech">
     <h2>Software</h2>
@@ -50,9 +50,8 @@
     </svg> -->
     <object data="/assets/img/espressif.svg" width="40" height="40"> </object>
     <object data="/assets/img/Nordic.svg" width="40" height="40"> </object>
-    <object data="/assets/img/microchip.svg" width="40" height="40"> </object>
     <object data="/assets/img/ARM.svg" width="40" height="40"> </object>
-    <p>MCUs, SOCs, SOMs... if can be programmed to make things, I like it!</p>
+    <p>MCUs, SOCs, SOMs... if it can be programmed to make things, I like it!</p>
   </div>
   <div class="tech">
     <h2>Tools</h2>
